# GenAIProject

./: .gitignore  README.md  pyproject.toml
CV Assesment/: cv_assessment.py
Object Detection/: streamlit_construction.py  streamlit_detection.py
Recipe Master Agent/: main.py  main2.py  main3.py
Simple Chatbot/: chatbot_example.py  simple_chatbot.py
Supply Chain Distribution/: marketing.py  product_design.py  straemlit_app.py  supplychain.py
