[project]
name = "genaiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langchain-qdrant>=0.2.1",
    "langgraph>=0.6.7",
    "streamlit>=1.49.1",
]
